--- a/Hotel/Web.config
+++ b/Hotel/Web.config
@@ -15,6 +15,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms name="hotel" timeout="20" loginUrl="~/Home/Home" defaultUrl="~/Home/Home" />
+    </authentication>
+    <roleManager enabled="true" defaultProvider="MyProvider">
+      <providers>
+        <clear/>
+        <add name="MyProvider" type="Hotel.MyProvider.SiteRole" />
+      </providers>
+    </roleManager>
+    
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
