--- a/Hotel/Hotel.csproj
+++ b/Hotel/Hotel.csproj
@@ -115,6 +115,7 @@
     <Content Include="images\9.jpg" />
     <Content Include="images\bg\bg 04.png" />
     <Content Include="images\bg_hotel.jpg" />
+    <Content Include="images\calendar-512.png" />
     <Content Include="images\close.png" />
     <Content Include="images\email.png" />
     <Content Include="images\gallery.png" />
@@ -137,6 +138,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ReservesController.cs" />
     <Compile Include="Controllers\RoomsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
